[gd_scene load_steps=26 format=3 uid="uid://xh68prap5akj"]

[ext_resource type="Texture2D" uid="uid://swlt67kvlp7u" path="res://Assets/Sprites/Backgrounds/MainMenu.png" id="1_kysdl"]
[ext_resource type="Script" uid="uid://dsrlsr0niy3rt" path="res://Scripts/GUI/title_buttons.gd" id="1_roj86"]
[ext_resource type="Texture2D" uid="uid://dpj2b7s6vlvr0" path="res://Assets/Sprites/GUI/Buttons/New.png" id="2_kjbj0"]
[ext_resource type="Texture2D" uid="uid://sp4wh1qxqro3" path="res://Assets/Sprites/GUI/Buttons/Load.png" id="3_h4qv3"]
[ext_resource type="Texture2D" uid="uid://c4w2oolkqr8qp" path="res://Assets/Sprites/GUI/Buttons/Quit.png" id="3_sufyd"]
[ext_resource type="Texture2D" uid="uid://bnvxv36jc6f8" path="res://Assets/Sprites/GUI/Buttons/Achievements.png" id="4_hgm2k"]
[ext_resource type="PackedScene" uid="uid://cvv0gpubt765j" path="res://Scenes/GUI/achievements_menu.tscn" id="6_kysdl"]
[ext_resource type="Texture2D" uid="uid://du7ro4la741i4" path="res://Assets/Sprites/GUI/Buttons/Settings.png" id="6_oxd3l"]
[ext_resource type="Texture2D" uid="uid://pb1vfwgvjiml" path="res://Assets/Sprites/GUI/Buttons/SpeedrunMode.png" id="8_shcqs"]
[ext_resource type="PackedScene" uid="uid://clkawf7n1yg00" path="res://Scenes/GUI/settings_menu.tscn" id="8_w4sgk"]
[ext_resource type="AudioStream" uid="uid://dmjhlutkjeexy" path="res://Assets/Audio/Music/musMainMenu.ogg" id="10_oxd3l"]
[ext_resource type="PackedScene" uid="uid://bwoda6al5nah2" path="res://Scenes/GUI/speedrun_mode_menu.tscn" id="11_p5jl7"]
[ext_resource type="PackedScene" uid="uid://cnapla1ydbe63" path="res://Scenes/Objects/Solids/tiles.tscn" id="11_vtciy"]
[ext_resource type="PackedScene" uid="uid://chihoo373bwy7" path="res://Scenes/Objects/Items/saltniczka.tscn" id="12_72p0a"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_sufyd"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_w4sgk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kjbj0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kysdl"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vtciy"]

[sub_resource type="LabelSettings" id="LabelSettings_72p0a"]
font_size = 14

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hgm2k"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_oxd3l"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_h4qv3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dgnw3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_72p0a"]

[node name="TitleScreen" type="Node2D"]
metadata/Music = "souMainMenu.wav"

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_kysdl")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="TitleButtons" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -587.0
offset_top = -42.5
offset_right = -480.0
offset_bottom = 42.5
script = ExtResource("1_roj86")

[node name="NewGame" type="Button" parent="TitleButtons"]
layout_mode = 0
offset_left = 4.0
offset_top = -1.0
offset_right = 108.0
offset_bottom = 39.0
theme_override_colors/icon_pressed_color = Color(1, 0.564706, 0, 1)
theme_override_colors/icon_hover_color = Color(1, 1, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxEmpty_sufyd")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_w4sgk")
theme_override_styles/hover = SubResource("StyleBoxEmpty_kjbj0")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_kysdl")
theme_override_styles/focus = SubResource("StyleBoxEmpty_vtciy")
icon = ExtResource("2_kjbj0")

[node name="LoadGame" type="Button" parent="TitleButtons"]
layout_mode = 0
offset_left = 4.0
offset_top = -44.0
offset_right = 108.0
offset_bottom = -4.0
theme_override_colors/icon_pressed_color = Color(1, 0.564706, 0, 1)
theme_override_colors/icon_hover_color = Color(1, 1, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxEmpty_sufyd")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_w4sgk")
theme_override_styles/hover = SubResource("StyleBoxEmpty_kjbj0")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_kysdl")
theme_override_styles/focus = SubResource("StyleBoxEmpty_vtciy")
icon = ExtResource("3_h4qv3")

[node name="Information" type="Label" parent="TitleButtons/LoadGame"]
layout_mode = 0
offset_left = 8.0
offset_top = -91.0
offset_right = 191.0
offset_bottom = -2.0
text = "This save was made in a
different version of this 
game, there is a possibility 
of some things breaking."
label_settings = SubResource("LabelSettings_72p0a")

[node name="Achievements" type="Button" parent="TitleButtons"]
layout_mode = 0
offset_left = 4.0
offset_top = 42.0
offset_right = 186.0
offset_bottom = 82.0
theme_override_colors/icon_pressed_color = Color(1, 0.564706, 0, 1)
theme_override_colors/icon_hover_color = Color(1, 1, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxEmpty_hgm2k")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_oxd3l")
theme_override_styles/hover = SubResource("StyleBoxEmpty_h4qv3")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_dgnw3")
theme_override_styles/focus = SubResource("StyleBoxEmpty_72p0a")
icon = ExtResource("4_hgm2k")

[node name="Settings" type="Button" parent="TitleButtons"]
layout_mode = 0
offset_left = 4.0
offset_top = 82.0
offset_right = 151.0
offset_bottom = 122.0
theme_override_colors/icon_pressed_color = Color(1, 0.564706, 0, 1)
theme_override_colors/icon_hover_color = Color(1, 1, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxEmpty_hgm2k")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_oxd3l")
theme_override_styles/hover = SubResource("StyleBoxEmpty_h4qv3")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_dgnw3")
theme_override_styles/focus = SubResource("StyleBoxEmpty_72p0a")
icon = ExtResource("6_oxd3l")

[node name="Quit" type="Button" parent="TitleButtons"]
layout_mode = 0
offset_left = 4.0
offset_top = 127.0
offset_right = 108.0
offset_bottom = 167.0
theme_override_colors/icon_pressed_color = Color(1, 0.564706, 0, 1)
theme_override_colors/icon_hover_color = Color(1, 1, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxEmpty_hgm2k")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_oxd3l")
theme_override_styles/hover = SubResource("StyleBoxEmpty_h4qv3")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_dgnw3")
theme_override_styles/focus = SubResource("StyleBoxEmpty_72p0a")
icon = ExtResource("3_sufyd")

[node name="SpeedrunMode" type="Button" parent="TitleButtons"]
layout_mode = 0
offset_left = 4.0
offset_top = 191.0
offset_right = 164.0
offset_bottom = 231.0
theme_override_colors/icon_pressed_color = Color(1, 0.564706, 0, 1)
theme_override_colors/icon_hover_color = Color(1, 1, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxEmpty_hgm2k")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_oxd3l")
theme_override_styles/hover = SubResource("StyleBoxEmpty_h4qv3")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_dgnw3")
theme_override_styles/focus = SubResource("StyleBoxEmpty_72p0a")
icon = ExtResource("8_shcqs")

[node name="AchievementsMenu" parent="." instance=ExtResource("6_kysdl")]

[node name="SettingsMenu" parent="." instance=ExtResource("8_w4sgk")]

[node name="SpeedrunModeMenu" parent="." instance=ExtResource("11_p5jl7")]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("10_oxd3l")
autoplay = true
bus = &"Music"

[node name="Tiles" parent="." instance=ExtResource("11_vtciy")]

[node name="saltniczka" parent="." instance=ExtResource("12_72p0a")]
position = Vector2(277, -140)
scale = Vector2(0.5, 0.5)

[connection signal="pressed" from="TitleButtons/NewGame" to="TitleButtons" method="_on_new_game_pressed"]
[connection signal="pressed" from="TitleButtons/LoadGame" to="TitleButtons" method="_on_load_game_pressed"]
[connection signal="pressed" from="TitleButtons/Achievements" to="TitleButtons" method="_on_achievements_pressed"]
[connection signal="pressed" from="TitleButtons/Settings" to="TitleButtons" method="_on_settings_pressed"]
[connection signal="pressed" from="TitleButtons/Quit" to="TitleButtons" method="_on_quit_pressed"]
[connection signal="pressed" from="TitleButtons/SpeedrunMode" to="TitleButtons" method="_on_speedrun_mode_pressed"]
